# reco_michelin_chatbot

./: .env.example  README.md  catalog.csv  pyproject.toml  pytest.ini  reco_michelin_chatbot.py  requirements.txt
data/vector_index/: index.faiss  index.pkl
src/: __init__.py  config.py  main.py
src/models/: __init__.py  tire.py
src/services/: __init__.py  rag_service.py
src/ui/: __init__.py  streamlit_app.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  test_config.py  test_models.py  test_rag_service.py  test_streamlit_app.py
